Fix: Full Screen - Overlap mode disabled at mac #344

--- a/userChrome.css
+++ b/userChrome.css
@@ -3856,19 +3856,21 @@ tab[visuallyselected] > stack::after {
 }
 
 /** Fullscreen - Overlap toolbar **********************************************/
-:root[sizemode="fullscreen"] #navigator-toolbox {
-  position: fixed !important; /* Needed for content to take up entire height */
-  display: block !important; /* Needed for content to take up entire height */
-  z-index: 1000 !important; /* Puts the UI above the content */
-}
+@supports not -moz-bool-pref("layout.css.osx-font-smoothing.enabled") {
+  :root[sizemode="fullscreen"] #navigator-toolbox {
+    position: fixed !important; /* Needed for content to take up entire height */
+    display: block !important; /* Needed for content to take up entire height */
+    z-index: 1000 !important; /* Puts the UI above the content */
+  }
 
-:root[sizemode="fullscreen"] :-moz-any(#navigator-toolbox, #titlebar, #nav-bar, #PersonalToolbar) {
-  width: 100%; /* Makes the UI take up the entire width */
-}
+  :root[sizemode="fullscreen"] :-moz-any(#navigator-toolbox, #titlebar, #nav-bar, #PersonalToolbar) {
+    width: 100%; /* Makes the UI take up the entire width */
+  }
 
-:root:not([sizemode="fullscreen"]) #PersonalToolbar[initialized="true"]:not([collapsed="true"]),
-:root[sizemode="fullscreen"] #PersonalToolbar[initialized="true"] {
-  visibility: unset !important; /* Makes the bookmarks toolbar visible if enabled */
+  :root:not([sizemode="fullscreen"]) #PersonalToolbar[initialized="true"]:not([collapsed="true"]),
+  :root[sizemode="fullscreen"] #PersonalToolbar[initialized="true"] {
+    visibility: unset !important; /* Makes the bookmarks toolbar visible if enabled */
+  }
 }
 
 /** Library - Icons Replace ***************************************************/
